[package]
name = "xed"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"], optional = true }
num_enum = "0.7"
thiserror = "1"

xed-sys = { version = "0.4", path = "../xed-sys" }

[dev-dependencies]
anyhow = "1"
array-concat = "0.5"
clap = { version = "4.4", features = ["derive"] }

[[example]]
name = "xed-min"
required-features = ["clap"]
